# tunes

./: CHANGELOG.md  cabal.project.local  pl-synth.cabal
src/: Dsl.hs  Export.hs  Notes.hs  Songs.hs  Synths.hs  Theory.hs  Write.hs
src/Songs/: Roses.hs  Solaris.hs
src/Synths/: Types.hs
