cabal-version:   3.4
name:            tunes
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Dsl
    Notes
    Songs
    Songs.Roses
    Synths
    Theory

  -- other-modules:
  default-extensions:
    DerivingStrategies
    NoImplicitPrelude
    OverloadedRecordDot

  build-depends:
    , base        ^>=4.18.2.1
    , containers
    , pl-synth
    , relude
    , vector

  hs-source-dirs:     src
  default-language:   GHC2021

executable all-songs
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -O2 -debug
  build-depends:
    , base
    , tunes
